--- a/app/src/main/res/layout/n_fragment_list.xml
+++ b/app/src/main/res/layout/n_fragment_list.xml
@@ -1,17 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <include
-        layout="@layout/_fragment_error"
-        android:visibility="gone" />
-
-    <include
-        layout="@layout/_fragment_pause"
-        android:visibility="gone" />
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tbList"
@@ -26,26 +18,25 @@
 
         <include
             android:id="@+id/tbListBasic"
-            layout="@layout/n_toolbar_list_basic"
-            tools:layout_editor_absoluteX="16dp"
-            tools:visibility="gone" />
+            layout="@layout/n_toolbar_list_basic" />
 
         <include
             android:id="@+id/tbListModify"
             layout="@layout/n_toolbar_list_modify"
-            android:visibility="gone"
-            tools:visibility="visible" />
+            android:visibility="gone" />
 
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvListProjects"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/clDelete"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/clDeleteProject"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbList" />
+        app:layout_constraintTop_toBottomOf="@+id/tbList"
+        tools:itemCount="10"
+        tools:listitem="@layout/_item_project_container" />
 
     <ImageView
         android:id="@+id/ivAddProject"
@@ -54,45 +45,38 @@
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="30dp"
         android:contentDescription="Add project"
-        app:layout_constraintBottom_toTopOf="@+id/clDelete"
+        app:layout_constraintBottom_toTopOf="@+id/clDeleteProject"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_input_add"
-        tools:visibility="gone" />
+        app:srcCompat="@android:drawable/ic_input_add" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/clDelete"
+        android:id="@+id/clDeleteProject"
         android:layout_width="0dp"
         android:layout_height="70dp"
         android:orientation="horizontal"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:visibility="visible">
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:id="@+id/ivDeleteActive"
+            android:id="@+id/ivDeleteProject"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:contentDescription="Delete"
             android:paddingVertical="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_menu_delete" />
-
-        <ImageView
-            android:id="@+id/ivDeleteInactive"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:contentDescription="Delete"
-            android:paddingVertical="8dp"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@android:drawable/ic_menu_delete" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <include
+        layout="@layout/_fragment_error"
+        android:visibility="gone" />
+
+    <include
+        layout="@layout/_fragment_pause"
+        android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
